--- a/index.html
+++ b/index.html
@@ -9,8 +9,48 @@
     <title>Document</title>
 </head>
 <body>
+
+    <!-- navbar -->
+    <header class="pt-0 border-bottom">
+        <div class="container">
+            <nav class="navbar navbar-expand-sm bg-white navbar-dark d-flex align-content-between">
+                        <a class="navbar-brand text-dark fw-bold" href="index.html">
+                            <img src="./img/acmCSUF 1.png" alt="logo" width="30" height="24" /> CSUF
+                        </a>
+                        <button class="navbar-toggler bg-dark" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse d-lg-flex flex-row justify-content-end" id="collapsibleNavbar">
+                            <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link text-dark fw-semibold" href="about.html">about</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark fw-semibold" href="events.html">events</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark fw-semibold" href="blog.html">blog</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark fw-semibold" href="path.html">paths</a>
+                            </li>    
+                            <li class="nav-item">
+                                <a class="nav-link text-dark fw-semibold" href="nodebuds.html">node<span class="text-danger">Buds</span></a>
+                            </li>    
+                            <li class="nav-item">
+                                <a class="nav-link text-dark fw-semibold" href="contact.html">connect</a>
+                            </li>    
+                            </ul>
+                        </div>
+              </nav>
+        </div>
+
+    </header>
+
+
+
     <!-- NAVBAR -->
-    <nav class="navbar d-flex justify-content-space-between">
+    <!-- <nav class="navbar d-flex justify-content-space-between">
         <div class="logo d-flex justify-content-center align-items-center">
             <img src="./img/acmCSUF 1.png" alt="">
             <h1 class="mx-2 fw-bold">CSUF</h1>
@@ -22,7 +62,7 @@
             <a href="#" class="text-decoration-none fw-bolder">node<span>Buds</span></a>
             <a href="#" class="text-decoration-none fw-bolder mx-3">connect</a>
         </div>
-    </nav>
+    </nav> -->
     <!-- END OF NAVBAR -->
 
     <!-- FIRST SECTION -->
